<resources>
    <string name="title_login">Iniciar sesión</string>
    <string name="title_register">Registrar</string>
    <string name="title_my_profile">Mi perfil</string>
    <string name="title_profile_creation">Creación de perfil</string>
    <string name="title_reset_password">Restablecer contraseña</string>
    <string name="title_country_selection">Selección de país</string>
    <string name="title_language_selection">Selección de idioma</string>
    <string name="title_edit_biography">Editar biografía</string>
    <string name="title_search">Buscar</string>
    <string name="title_conversations">Conversaciones</string>
    <string name="toolbar_next">SIGUIENTE</string>
    <string name="toolbar_finish">TERMINAR</string>
    <string name="toolbar_save">GUARDAR</string>
    <string name="loading">Cargando</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="app_name">WikaChat</string>
    <string name="login">Login</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="signin">Iniciar sesión</string>
    <string name="forgot_password"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="signin_google">Iniciar sesión con Google</string>
    <string name="signin_facebook">Iniciar sesión con Facebook</string>
    <string name="no_account">No tengo una cuenta</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="signup_google">Registrarse con Google</string>
    <string name="signup_facebook">Registrarse con Facebook</string>
    <string name="credits_title">Créditos</string>
    <string name="credits_subtitle">Iconos hechos por:</string>
    <string name="credits_freepik">Freepik desde flaticon.es</string>
    <string name="credits_those_icons">Those Icons desde flaticon.es</string>
    <string name="credits_pixel_perfect">Pixel Perfect desde flaticon.es</string>
    <string name="credits_creaticca_creative_agency">Creaticca Creative Agency desde flaticon.es</string>
    <string name="credits_rotulos_matesanz">Rótulos Matesanz desde rotulosmatesanz.com</string>
    <string name="profile_creation_name">Nombre</string>
    <string name="profile_creation_age">Edad</string>
    <string name="profile_creation_gender">Género</string>
    <string name="profile_creation_warning_title">¡Atención!</string>
    <string name="profile_creation_warning_body">Una vez elija estos datos, no se podrán cambiar más tarde</string>
    <string name="profile_creation_error_age">Tienes que ser mayor de edad para usar esta aplicación</string>
    <string-array name="profile_creation_genders">
        <item>@string/profile_creation_gender</item>
        <item>Hombre</item>
        <item>Mujer</item>
        <item>No-binario</item>
        <item>Fluido</item>
        <item>Otro</item>
    </string-array>
    <string name="profile_creation_2_origin_country">País de orígen</string>
    <string name="profile_creation_2_native_in">Nativo en</string>
    <string name="profile_creation_2__wish_to_learn">Deseo aprender</string>
    <string name="profile_creation_2_sth_that_defines_me">Algo que me define</string>
    <string name="profile_creation_2_sth_hello">¡Hola!</string>
    <string name="profile_creation_2_autogenerated">Esto es una biografía autogenerada. Podrá modificarla una vez complete la creación de su perfil</string>
    <string name="profile_creation_2_finishing_warning">¿Está seguro de que quiere finalizar su perfil?</string>
    <string name="profile_creation_2_error_adding_profile">Error al crear el perfil</string>
    <string name="profile_creation_2_error_updating_profile">Error al actualizar el perfil</string>
    <string name="autobio_1">Soy</string>
    <string name="autobio_2">¡encantado de conocerte!</string>
    <string name="autobio_3">Vengo de</string>
    <string name="autobio_4">y hablo fluidamente</string>
    <string name="autobio_5">Me gustaría mejorar mi</string>
    <string name="autobio_6">¡Me encantaría conocerte mejor, así que no dudes en hablarme!</string>
    <string name="my_profile_bio">Biografía</string>
    <string name="my_profile_extract">Extracto</string>
    <string name="my_profile_log_off">Salir de la cuenta</string>
    <string name="chat_write">Escribe un mensaje...</string>
    <string name="auth_enter_fields">Tiene que introducir su correo y contraseña</string>
    <string name="auth_passwords_dont_match">Las contraseñas no son iguales</string>
    <string name="auth_password_too_short">La contraseña debe contener por lo menos 6 caracteres</string>
    <string name="auth_email_bad">El correo está mal formateado</string>
    <string name="auth_all_fields_required">Todos los campos son requeridos</string>
    <string name="auth_verify_email">Por favor, verifique su correo</string>
    <string name="auth_login_failed">El inicio de sesión ha fallado</string>
    <string name="auth_registration_successful">El registro se ha completado. Por favor, verifique su correo</string>
    <string name="auth_error_sending_email">Hubo un error al enviar el correo de confirmación</string>
    <string name="auth_signup_failed">El registro ha fallado inesperadamente</string>
    <string name="reset_pwd_info">Introduzca su correo electrónico para restablecer la contraseña</string>
    <string name="reset_pwd_button">Restablecer contraseña</string>
    <string name="reset_pwd_email">Se le ha enviado un correo electrónico para restablecer la contraseña</string>
    <string name="reset_pwd_error_sending_email">Hubo un error al enviar el correo de restablecimiento</string>
</resources>