<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_gradient"
    tools:context=".activities.Login">

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="198dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <Button
        android:id="@+id/btn_signin"
        style="@style/AccentButton"
        android:layout_width="302dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_password" />

    <TextView
        android:id="@+id/lb_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />


    <EditText
        android:id="@+id/tx_email"
        style="@style/NormalInput"
        android:layout_width="302dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_title" />

    <EditText
        android:id="@+id/tx_password"
        style="@style/NormalInput"
        android:layout_width="302dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_email" />

    <Button
        android:id="@+id/btn_no_account"
        style="@style/GoogleButton"
        android:layout_width="302dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>