<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileCreation">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/title_profile_creation"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/btn_back_arrow"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/btn_back_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/transparent" />

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/perfil" />

    <EditText
        android:id="@+id/tx_define"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/profile_creation_2_sth_that_defines_me"
        android:inputType="textPersonName"
        android:maxLength="60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_learn" />

    <ImageView
        android:id="@+id/img_gray_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_define"
        app:srcCompat="@drawable/gray" />

    <TextView
        android:id="@+id/lb_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_creation_2_sth_hello"
        app:layout_constraintEnd_toEndOf="@+id/img_gray_bg"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/img_gray_bg"
        app:layout_constraintTop_toTopOf="@+id/img_gray_bg" />

    <TextView
        android:id="@+id/lb_warning"
        android:layout_width="323dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_creation_2_autogenerated"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_gray_bg" />

    <TextView
        android:id="@+id/lb_max_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tx_define"
        app:layout_constraintEnd_toEndOf="@+id/lb_learn"
        app:layout_constraintTop_toTopOf="@+id/tx_define"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/toolbar_finish"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_biography"
        android:layout_width="308dp"
        android:layout_height="70dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_gray_bg"
        app:layout_constraintEnd_toEndOf="@+id/img_gray_bg"
        app:layout_constraintStart_toStartOf="@+id/img_gray_bg"
        app:layout_constraintTop_toBottomOf="@+id/lb_hello" />

    <TextView
        android:id="@+id/lb_origin"
        style="@style/SelectionText"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_creation_2_origin_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_title" />

    <TextView
        android:id="@+id/lb_native"
        style="@style/SelectionText"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_creation_2_native_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_origin" />

    <TextView
        android:id="@+id/lb_learn"
        style="@style/SelectionText"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_creation_2__wish_to_learn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_native" />

</androidx.constraintlayout.widget.ConstraintLayout>